--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "e329eb8f-69f3-4234-a468-5e3889a58643"
 authors = ["Miguel Alonso <miguel883@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
 [compat]
 julia = "1.6"
 
