--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,8 +1,3 @@
-name = "Flight"
-uuid = "e329eb8f-69f3-4234-a468-5e3889a58643"
-authors = ["Miguel Alonso <miguel883@gmail.com> and contributors"]
-version = "0.1.0"
-
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
@@ -27,9 +22,8 @@ SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
-
-[compat]
-julia = "1.7"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
