--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 julia = "1.7"
