--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ ControlSystems = "a6e380b2-a6ca-5380-bf3e-84a91bcd477e"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
+FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
@@ -36,3 +37,28 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 julia = "1.7"
+BenchmarkTools = "1.3.1"
+ComponentArrays = "0.12.4"
+ControlSystems = "1.2.0"
+DataStructures = "0.18.13"
+DiffEqCallbacks = "2.23.1"
+FiniteDiff = "2.14.0"
+GLFW = "3.4.1"
+GR = "0.66.0"
+HDF5 = "0.16.10"
+Interpolations = "0.14.0"
+LaTeXStrings = "1.3.0"
+Measures = "0.3.1"
+NLopt = "0.6.5"
+OrdinaryDiffEq = "6.19.0"
+Plots = "1.31.4"
+RecursiveArrayTools = "2.31.2"
+Reexport = "1.2.2"
+Roots = "2.0.2"
+SciMLBase = "1.43.0"
+StaticArrays = "1.5.2"
+StructArrays = "0.6.11"
+Trapz = "2.0.3"
+UnPack = "1.0.2"
+Unitful = "1.11.0"
+Zygote = "0.6.41"
