--- a/test/Project.toml
+++ b/test/Project.toml
@@ -28,3 +28,29 @@ Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
+[compat]
+julia = "1.7"
+BenchmarkTools = "1.3.1"
+ComponentArrays = "0.12.4"
+DataStructures = "0.18.13"
+DiffEqCallbacks = "2.23.1"
+GLFW = "3.4.1"
+GR = "0.66.0"
+HDF5 = "0.16.10"
+Interpolations = "0.14.0"
+LaTeXStrings = "1.3.0"
+Measures = "0.3.1"
+NLopt = "0.6.5"
+OrdinaryDiffEq = "6.19.0"
+Plots = "1.31.4"
+RecursiveArrayTools = "2.31.2"
+Reexport = "1.2.2"
+Roots = "2.0.2"
+SciMLBase = "1.43.0"
+StaticArrays = "1.5.2"
+StructArrays = "0.6.11"
+Trapz = "2.0.3"
+UnPack = "1.0.2"
+Unitful = "1.11.0"
+Zygote = "0.6.41"
