--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,6 @@ HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -36,29 +35,30 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-julia = "1.7"
+AbstractTrees = "0.4.2"
 BenchmarkTools = "1.3.1"
-ComponentArrays = "0.12.4"
+ComponentArrays = "0.13.2"
 ControlSystems = "1.2.0"
 DataStructures = "0.18.13"
-DiffEqCallbacks = "2.23.1"
-FiniteDiff = "2.14.0"
+DiffEqCallbacks = "2.24.0"
+FiniteDiff = "2.15.0"
 GLFW = "3.4.1"
-GR = "0.66.0"
+GR = "0.66.2"
 HDF5 = "0.16.10"
-Interpolations = "0.14.0"
+Interpolations = "0.14.4"
 LaTeXStrings = "1.3.0"
-Measures = "0.3.1"
 NLopt = "0.6.5"
-OrdinaryDiffEq = "6.19.0"
-Plots = "1.31.4"
-RecursiveArrayTools = "2.31.2"
+OrdinaryDiffEq = "6.20.0"
+Plots = "1.31.7"
+RecursiveArrayTools = "2.32.0"
 Reexport = "1.2.2"
 Roots = "2.0.2"
-SciMLBase = "1.43.0"
-StaticArrays = "1.5.2"
-StructArrays = "0.6.11"
+SciMLBase = "1.49.1"
+SHA = "0.7.0"
+StaticArrays = "1.5.5"
+StructArrays = "0.6.12"
 Trapz = "2.0.3"
 UnPack = "1.0.2"
 Unitful = "1.11.0"
-Zygote = "0.6.41"
+Zygote = "0.6.44"
+julia = "1.8"
