--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
@@ -31,7 +32,6 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
-Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
@@ -53,12 +53,11 @@ Plots = "1.31.7"
 RecursiveArrayTools = "2.32.0"
 Reexport = "1.2.2"
 Roots = "2.0.2"
-SciMLBase = "1.49.1"
 SHA = "0.7.0"
+SciMLBase = "1.49.1"
 StaticArrays = "1.5.5"
 StructArrays = "0.6.12"
 Trapz = "2.0.3"
 UnPack = "1.0.2"
-Unitful = "1.11.0"
 Zygote = "0.6.44"
 julia = "1.8"
