--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,6 @@ GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
-JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
@@ -49,10 +48,12 @@ HDF5 = "0.16.10"
 Interpolations = "0.14.4"
 LaTeXStrings = "1.3.0"
 NLopt = "0.6.5"
+OhMyREPL = "0.5.12"
 OrdinaryDiffEq = "6.20.0"
 Plots = "1.31.7"
 RecursiveArrayTools = "2.32.0"
 Reexport = "1.2.2"
+Revise = "3.4.0"
 Roots = "2.0.2"
 SHA = "0.7.0"
 SciMLBase = "1.49.1"
