Added CImGui to dependencies, some minor name changes

--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+CImGui = "5d785b6c-b76f-510e-a07c-3070796c7e87"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 ControlSystems = "a6e380b2-a6ca-5380-bf3e-84a91bcd477e"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
@@ -15,6 +16,8 @@ FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+ImGuiGLFWBackend = "623d79b3-9695-4e60-bd7e-2a5aabaa6933"
+ImGuiOpenGLBackend = "9d0819b4-44e7-43a2-ad03-8fb999128168"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
