--- a/Project.toml
+++ b/Project.toml
@@ -41,6 +41,7 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 [compat]
 AbstractTrees = "0.4.2"
 BenchmarkTools = "1.3.1"
+CImGui = "= 1.79.0"
 ComponentArrays = "0.13.2"
 ControlSystems = "1.2.0"
 DataStructures = "0.18.13"
@@ -49,6 +50,8 @@ FiniteDiff = "2.15.0"
 GLFW = "3.4.1"
 GR = "0.66.2"
 HDF5 = "0.16.10"
+ImGuiGLFWBackend = "= 0.1.2"
+ImGuiOpenGLBackend = "= 0.1.1"
 Interpolations = "0.14.4"
 LaTeXStrings = "1.3.0"
 NLopt = "0.6.5"
