--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,52 +1,19 @@
 [deps]
-AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
-DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
-Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
-GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
-GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
-HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
-LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
-NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
-OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
-Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
-Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
-SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
-SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
-StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 BenchmarkTools = "1.3.1"
 ComponentArrays = "0.13.2"
-DataStructures = "0.18.13"
-DiffEqCallbacks = "2.23.1"
-GLFW = "3.4.1"
-GR = "0.66.0"
-HDF5 = "0.16.10"
-Interpolations = "0.14.0"
-LaTeXStrings = "1.3.0"
-Measures = "0.3.1"
-NLopt = "0.6.5"
-OrdinaryDiffEq = "6.19.0"
-Plots = "1.31.4"
-RecursiveArrayTools = "2.31.2"
-Reexport = "1.2.2"
-Roots = "2.0.2"
-SciMLBase = "1.43.0"
-StaticArrays = "1.5.2"
-StructArrays = "0.6.11"
-Trapz = "2.0.3"
+FiniteDiff = "2.15.0"
+Interpolations = "0.14.4"
+StaticArrays = "1.5.5"
 UnPack = "1.0.2"
-julia = "1.7"
+julia = "1.8"
