--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 [compat]
 AbstractTrees = "0.4.2"
 BenchmarkTools = "1.3.1"
-CImGui = "= 1.79.0"
+CImGui = "= 1.79.0, 1"
 ComponentArrays = "0.13.2"
 ControlSystemsBase = "1.0.1"
 DataStructures = "0.18.13"
