--- a/Project.toml
+++ b/Project.toml
@@ -40,33 +40,33 @@ Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
-AbstractTrees = "0.4.3"
+AbstractTrees = "0.4.4"
 BenchmarkTools = "1.3.2"
-CImGui = "= 1.79.1"
-ComponentArrays = "0.13.4"
-ControlSystemsBase = "1.0.2"
+CImGui = "1.79.1"
+ComponentArrays = "0.13.8"
+ControlSystemsBase = "1.4.1"
 DataStructures = "0.18.13"
-DiffEqCallbacks = "2.24.3"
-FiniteDiff = "2.16.0"
+DiffEqCallbacks = "2.26.1"
+FiniteDiff = "2.19.0"
 GLFW = "3.4.1"
-GR = ">=0.69.5"
-HDF5 = "0.16.12"
+GR = ">=0.71.8"
+HDF5 = "0.16.14"
 ImGuiGLFWBackend = "= 0.1.2"
 ImGuiOpenGLBackend = "= 0.1.1"
-Interpolations = "0.14.6"
+Interpolations = "0.14.7"
 LaTeXStrings = "1.3.0"
 NLopt = "0.6.5"
-OhMyREPL = "0.5.12"
-OrdinaryDiffEq = "6.31.1"
-Plots = "1.36.1"
-RecursiveArrayTools = "2.32.1"
+OhMyREPL = "0.5.20"
+OrdinaryDiffEq = "6.49.4"
+Plots = "1.38.8"
+RecursiveArrayTools = "2.38.3"
 Reexport = "1.2.2"
-Revise = "3.4.0"
-Roots = "2.0.8"
+Revise = "3.5.2"
+Roots = "2.0.10"
+SciMLBase = "1.91.6"
 SHA = "0.7.0"
-SciMLBase = "1.70.0"
-StaticArrays = "1.5.9"
-StructArrays = "0.6.13"
+StaticArrays = "1.5.19"
+StructArrays = "0.6.15"
 Trapz = "2.0.3"
 UnPack = "1.0.2"
 julia = "1.8"
