--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,7 @@ AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CImGui = "5d785b6c-b76f-510e-a07c-3070796c7e87"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
-ControlSystemsBase = "aaaaaaaa-a6ca-5380-bf3e-84a91bcd477e"
+ControlSystems = "a6e380b2-a6ca-5380-bf3e-84a91bcd477e"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
@@ -44,7 +44,6 @@ AbstractTrees = "0.4.4"
 BenchmarkTools = "1.3.2"
 CImGui = "1.79.1"
 ComponentArrays = "0.13.8"
-ControlSystemsBase = "1.4.1"
 DataStructures = "0.18.13"
 DiffEqCallbacks = "2.26.1"
 FiniteDiff = "2.19.0"
@@ -63,8 +62,8 @@ RecursiveArrayTools = "2.38.3"
 Reexport = "1.2.2"
 Revise = "3.5.2"
 Roots = "2.0.10"
-SciMLBase = "1.91.6"
 SHA = "0.7.0"
+SciMLBase = "1.91.6"
 StaticArrays = "1.5.19"
 StructArrays = "0.6.15"
 Trapz = "2.0.3"
