--- a/Project.toml
+++ b/Project.toml
@@ -44,6 +44,7 @@ AbstractTrees = "0.4.4"
 BenchmarkTools = "1.3.2"
 CImGui = "1.79.1"
 ComponentArrays = "0.13.8"
+ControlSystems = "1"
 DataStructures = "0.18.13"
 DiffEqCallbacks = "2.26.1"
 FiniteDiff = "2.19.0"
