--- a/Project.toml
+++ b/Project.toml
@@ -42,30 +42,31 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 [compat]
 AbstractTrees = "0.4.4"
 BenchmarkTools = "1.3.2"
-CImGui = "1.79.1"
-ComponentArrays = "0.13.8"
-DataStructures = "0.18.13"
+CImGui = "1.82.0"
+ComponentArrays = "0.13.14"
+ControlSystems = "1.7.4"
+DataStructures = "0.18.14"
 DiffEqCallbacks = "2.26.1"
-FiniteDiff = "2.19.0"
+FiniteDiff = "2.21.1"
 GLFW = "3.4.1"
-GR = ">=0.71.8"
-HDF5 = "0.16.14"
+GR = ">=0.72.7"
+HDF5 = "0.16.15"
 ImGuiGLFWBackend = "= 0.1.2"
 ImGuiOpenGLBackend = "= 0.1.1"
 Interpolations = "0.14.7"
 LaTeXStrings = "1.3.0"
 NLopt = "0.6.5"
-OhMyREPL = "0.5.20"
-OrdinaryDiffEq = "6.49.4"
-Plots = "1.38.8"
-RecursiveArrayTools = "2.38.3"
+OhMyREPL = "0.5.22"
+OrdinaryDiffEq = "6.53.3"
+Plots = "1.38.16"
+RecursiveArrayTools = "2.38.5"
 Reexport = "1.2.2"
-Revise = "3.5.2"
-Roots = "2.0.10"
+Revise = "3.5.3"
+Roots = "2.0.17"
 SHA = "0.7.0"
-SciMLBase = "1.91.6"
-StaticArrays = "1.5.19"
+SciMLBase = "1.93.0"
+StaticArrays = "1.6.0"
 StructArrays = "0.6.15"
 Trapz = "2.0.3"
 UnPack = "1.0.2"
-julia = "1.8"
+julia = "1.9"
