--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,6 +1,7 @@
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
+ControlSystems = "a6e380b2-a6ca-5380-bf3e-84a91bcd477e"
 FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -14,6 +15,7 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 [compat]
 BenchmarkTools = "1.3.2"
 ComponentArrays = "0.13.14"
+ControlSystems = "1.7.4"
 FiniteDiff = "2.21.1"
 Interpolations = "0.14.7"
 StaticArrays = "1.6.0"
