Finished C172FBW linearization, added RobustAndDesignControl to dependences, created design notebook for FBW pitch rate CAS

--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,7 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+RobustAndOptimalControl = "21fd56a4-db03-40ee-82ee-a87907bee541"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
