--- a/test/Project.toml
+++ b/test/Project.toml
@@ -8,13 +8,12 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
-Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
-BenchmarkTools = "1.3.2"
-ComponentArrays = "0.13.14"
+BenchmarkTools = ">=1.3.2"
+ComponentArrays = ">=0.13.14"
 ControlSystems = "1.7.4"
 FiniteDiff = "2.21.1"
 Interpolations = "0.14.7"
