--- a/Project.toml
+++ b/Project.toml
@@ -48,19 +48,19 @@ DiffEqCallbacks = "2.26.1"
 FiniteDiff = "2.21.1"
 GLFW = "3.4.1"
 GR = ">=0.72.7"
-HDF5 = "0.16.15"
-ImGuiGLFWBackend = "= 0.1.2"
-ImGuiOpenGLBackend = "= 0.1.1"
+HDF5 = ">=0.16.15"
+ImGuiGLFWBackend = ">=0.1.2"
+ImGuiOpenGLBackend = ">=0.1.1"
 Interpolations = "0.14.7"
 LaTeXStrings = "1.3.0"
-NLopt = "0.6.5"
+NLopt = ">=0.6.5"
 OrdinaryDiffEq = "6.53.3"
 Plots = "1.38.16"
 RecursiveArrayTools = "2.38.5"
 Reexport = "1.2.2"
 Roots = "2.0.17"
 SHA = "0.7.0"
-SciMLBase = "1.93.0"
+SciMLBase = ">=1.93.0"
 StaticArrays = "1.6.0"
 StructArrays = "0.6.15"
 Trapz = "2.0.3"
