--- a/Project.toml
+++ b/Project.toml
@@ -40,7 +40,7 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 AbstractTrees = "0.4.4"
-CImGui = "=1.82.0"
+CImGui = ">=1.89.0"
 ComponentArrays = ">=0.13.4"
 ControlSystems = "1.7.4"
 DataStructures = "0.18.14"
@@ -49,8 +49,8 @@ FiniteDiff = "2.21.1"
 GLFW = "3.4.1"
 GR = ">=0.72.7"
 HDF5 = ">=0.16.15"
-ImGuiGLFWBackend = "=0.1.3"
-ImGuiOpenGLBackend = "=0.1.2"
+ImGuiGLFWBackend = ">=0.1.3"
+ImGuiOpenGLBackend = ">=0.1.2"
 Interpolations = "0.14.7"
 LaTeXStrings = "1.3.0"
 NLopt = ">=0.6.5"
