--- a/Project.toml
+++ b/Project.toml
@@ -40,29 +40,29 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 AbstractTrees = "0.4.4"
-CImGui = ">=1.89.0"
-ComponentArrays = ">=0.13.4"
-ControlSystems = "1.7.4"
-DataStructures = "0.18.14"
-DiffEqCallbacks = "2.26.1"
+CImGui = "1.89.0"
+ComponentArrays = "0.15.5"
+ControlSystems = "1.8.2"
+DataStructures = "0.18.15"
+DiffEqCallbacks = "2.34.0"
 FiniteDiff = "2.21.1"
 GLFW = "3.4.1"
-GR = ">=0.72.7"
-HDF5 = ">=0.16.15"
-ImGuiGLFWBackend = ">=0.1.3"
-ImGuiOpenGLBackend = ">=0.1.2"
+GR = ">=0.72.10"
+HDF5 = ">=0.17.1"
+ImGuiGLFWBackend = "0.2.0"
+ImGuiOpenGLBackend = "0.2.0"
 Interpolations = "0.14.7"
-LaTeXStrings = "1.3.0"
-NLopt = ">=0.6.5"
-OrdinaryDiffEq = "6.53.3"
-Plots = "1.38.16"
-RecursiveArrayTools = "2.38.5"
+LaTeXStrings = "1.3.1"
+NLopt = "1.0.0"
+OrdinaryDiffEq = "6.59.2"
+Plots = "1.39.0"
+RecursiveArrayTools = "2.38.10"
 Reexport = "1.2.2"
-Roots = "2.0.17"
+Roots = "2.0.22"
 SHA = "0.7.0"
-SciMLBase = ">=1.93.0"
-StaticArrays = "1.6.0"
-StructArrays = "0.6.15"
+SciMLBase = "2.8.2"
+StaticArrays = "1.7.0"
+StructArrays = "0.6.16"
 Trapz = "2.0.3"
 UnPack = "1.0.2"
 julia = "1.9"
