--- a/test/Project.toml
+++ b/test/Project.toml
@@ -14,9 +14,9 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 [compat]
 BenchmarkTools = ">=1.3.2"
 ComponentArrays = ">=0.13.14"
-ControlSystems = "1.7.4"
-FiniteDiff = "2.21.1"
-Interpolations = "0.14.7"
-StaticArrays = "1.6.0"
+ControlSystems = ">=1.7.4"
+FiniteDiff = ">=2.21.1"
+Interpolations = ">=0.14.7"
+StaticArrays = ">=1.6.0"
 UnPack = "1.0.2"
-julia = "1.9"
+julia = "1.10"
