--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 ImGuiGLFWBackend = "623d79b3-9695-4e60-bd7e-2a5aabaa6933"
 ImGuiOpenGLBackend = "9d0819b4-44e7-43a2-ad03-8fb999128168"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
@@ -36,6 +37,7 @@ SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
+StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
