--- a/Project.toml
+++ b/Project.toml
@@ -45,25 +45,25 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 AbstractTrees = "0.4.4"
 CImGui = "1.89.0"
 ComponentArrays = "0.15.5"
-ControlSystems = ">=1.8.2"
-DataStructures = "0.18.15"
-DiffEqCallbacks = "2.34.0"
-FiniteDiff = ">=2.21.1"
+ControlSystems = ">=1.10.2"
+DataStructures = ">=0.18.20"
+DiffEqCallbacks = ">=2.34.0"
+FiniteDiff = ">=2.23.1"
 GLFW = "3.4.1"
 GR = ">=0.72.10"
-HDF5 = ">=0.17.1"
+HDF5 = ">=0.17.2"
 ImGuiGLFWBackend = "0.2.0"
 ImGuiOpenGLBackend = "0.2.0"
 Interpolations = ">=0.14.7"
 LaTeXStrings = "1.3.1"
 NLopt = "1.0.0"
 OrdinaryDiffEq = ">=6.59.2"
-Plots = "1.39.0"
+Plots = ">=1.40.0"
 RecursiveArrayTools = ">=2.38.10"
 Reexport = "1.2.2"
 Roots = "2.0.22"
 SHA = "0.7.0"
-SciMLBase = ">=2.8.2"
+SciMLBase = ">=2.34.0"
 StaticArrays = "1.7.0"
 StructArrays = "0.6.16"
 Trapz = "2.0.3"
