--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,6 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
@@ -44,28 +43,30 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 [compat]
 AbstractTrees = "0.4.4"
 CImGui = "1.89.0"
-ComponentArrays = "0.15.5"
-ControlSystems = ">=1.8.2"
+ComponentArrays = "0.15.14"
+ControlSystems = "1.10.3"
 DataStructures = "0.18.15"
-DiffEqCallbacks = "2.34.0"
-FiniteDiff = ">=2.21.1"
-GLFW = "3.4.1"
-GR = ">=0.72.10"
-HDF5 = ">=0.17.1"
+DiffEqCallbacks = "3.6.2"
+FiniteDiff = "2.23.1"
+GLFW = "3.4.3"
+GR = ">=0.73.6"
+HDF5 = ">=0.17.2"
 ImGuiGLFWBackend = "0.2.0"
 ImGuiOpenGLBackend = "0.2.0"
-Interpolations = ">=0.14.7"
+Interpolations = ">=0.15.1"
+JSON3 = "1.14.0"
 LaTeXStrings = "1.3.1"
-NLopt = "1.0.0"
-OrdinaryDiffEq = ">=6.59.2"
-Plots = "1.39.0"
+NLopt = "1.0.2"
+OrdinaryDiffEq = "6.85.0"
+Plots = "1.40.5"
 RecursiveArrayTools = ">=2.38.10"
 Reexport = "1.2.2"
-Roots = "2.0.22"
-SHA = "0.7.0"
-SciMLBase = ">=2.8.2"
-StaticArrays = "1.7.0"
-StructArrays = "0.6.16"
+RobustAndOptimalControl = "0.4.31"
+Roots = "2.1.5"
+SciMLBase = "2.42.0"
+StaticArrays = "1.9.7"
+StructArrays = "0.6.18"
+StructTypes = "1.10.0"
 Trapz = "2.0.3"
 UnPack = "1.0.2"
 julia = "1.10"
