--- a/Project.toml
+++ b/Project.toml
@@ -55,7 +55,7 @@ ImGuiOpenGLBackend = "0.2.0"
 Interpolations = ">=0.15.1"
 JSON3 = "1.14.0"
 LaTeXStrings = "1.3.1"
-NLopt = "1.0.3"
+NLopt = ">=1.0.3"
 OrdinaryDiffEq = "6.89.0"
 Plots = "1.40.5"
 RecursiveArrayTools = ">=2.38.10"
@@ -67,4 +67,4 @@ StructArrays = "0.6.18"
 StructTypes = "1.10.0"
 Trapz = "2.0.3"
 UnPack = "1.0.2"
-julia = "1.10"
+julia = "1.11"
