--- a/Project.toml
+++ b/Project.toml
@@ -45,7 +45,7 @@ CImGui = "=1.89.1"
 ComponentArrays = "0.15.14"
 ControlSystems = "1.10.3"
 DataStructures = "0.18.15"
-DiffEqCallbacks = "3.8.0"
+DiffEqCallbacks = ">=3.8.0"
 FiniteDiff = "2.23.1"
 GLFW = "3.4.3"
 GR = ">=0.73.6"
