Updated Project.toml and .gitignore

--- a/Project.toml
+++ b/Project.toml
@@ -15,13 +15,12 @@ FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
-ImGuiGLFWBackend = "623d79b3-9695-4e60-bd7e-2a5aabaa6933"
-ImGuiOpenGLBackend = "9d0819b4-44e7-43a2-ad03-8fb999128168"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -41,7 +40,7 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 AbstractTrees = "0.4.4"
-CImGui = "=1.89.1"
+CImGui = "3.1.1"
 ComponentArrays = "0.15.14"
 ControlSystems = "1.10.3"
 DataStructures = "0.18.15"
@@ -50,11 +49,10 @@ FiniteDiff = "2.23.1"
 GLFW = "3.4.3"
 GR = ">=0.73.6"
 HDF5 = ">=0.17.2"
-ImGuiGLFWBackend = "0.2.0"
-ImGuiOpenGLBackend = "0.2.0"
 Interpolations = ">=0.15.1"
 JSON3 = "1.14.0"
 LaTeXStrings = "1.3.1"
+ModernGL = "1.1.7"
 NLopt = ">=1.0.3"
 OrdinaryDiffEq = "6.89.0"
 Plots = "1.40.5"
@@ -63,7 +61,7 @@ Reexport = "1.2.2"
 RobustAndOptimalControl = "0.4.31"
 Roots = "2.1.5"
 StaticArrays = "1.9.7"
-StructArrays = "0.6.18"
+StructArrays = ">=0.7.0"
 StructTypes = "1.10.0"
 Trapz = "2.0.3"
 UnPack = "1.0.2"
