Added rotation vector representation to Attitude module, started tests for SRUT

--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+LazyArrays = "5078a376-72f3-5289-bfd5-ec5146d43c02"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
@@ -52,6 +53,7 @@ HDF5 = ">=0.17.2"
 Interpolations = ">=0.15.1"
 JSON3 = "1.14.0"
 LaTeXStrings = "1.3.1"
+LazyArrays = "2.3.1"
 ModernGL = "1.1.7"
 NLopt = ">=1.0.3"
 OrdinaryDiffEq = "6.89.0"
