Fixed compat entries without upper bounds

--- a/Project.toml
+++ b/Project.toml
@@ -46,26 +46,26 @@ CImGui = "6"
 ComponentArrays = "0.15.14"
 ControlSystems = "1.10.3"
 DataStructures = "0.18.15"
-DiffEqCallbacks = ">=3.8.0"
+DiffEqCallbacks = "4.8"
 FiniteDiff = "2.23.1"
 GLFW = "3.4.3"
-GR = ">=0.72"
-HDF5 = ">=0.17.2"
-Interpolations = ">=0.15.1"
+GR = "0.73"
+HDF5 = "0.17"
+Interpolations = "0.16"
 JSON3 = "1.14.0"
 LaTeXStrings = "1.3.1"
 LazyArrays = "2.3.1"
 ModernGL = "1.1.7"
-NLopt = ">=1.0.3"
+NLopt = "1.0.3"
 OrdinaryDiffEq = "6.89.0"
 Plots = "1.40.5"
-RecursiveArrayTools = ">=2.38.10"
+RecursiveArrayTools = "3.35"
 Reexport = "1.2.2"
 RobustAndOptimalControl = "0.4.31"
 Roots = "2.1.5"
 SDL2_jll = "2.24.2"
 StaticArrays = "1.9.7"
-StructArrays = ">=0.7.0"
+StructArrays = "0.7"
 StructTypes = "1.10.0"
 Trapz = "2.0.3"
 UnPack = "1.0.2"
