--- a/test/Project.toml
+++ b/test/Project.toml
@@ -18,9 +18,9 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 [compat]
 BenchmarkTools = ">=1.5.0"
 ComponentArrays = "0.15.14"
-ControlSystems = "1.10.3"
+ControlSystems = "1.14"
 FiniteDiff = "2.23.1"
-Interpolations = ">=0.15.1"
+Interpolations = "0.16"
 JSON3 = "1.14.0"
 StaticArrays = "1.9.7"
 StructTypes = "1.10.0"
