--- a/packages/FlightApps/Project.toml
+++ b/packages/FlightApps/Project.toml
@@ -3,6 +3,9 @@ uuid = "c94c8c3d-2ef7-4940-9544-b98dae328d9f"
 version = "0.1.0"
 authors = ["Miguel Alonso <miguel883@gmail.com>"]
 
+[workspace]
+projects = ["test"]
+
 [deps]
 CImGui = "5d785b6c-b76f-510e-a07c-3070796c7e87"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
@@ -26,6 +29,10 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 
+[sources]
+FlightCore = {path = "../FlightCore"}
+FlightLib = {path = "../FlightLib"}
+
 [compat]
 CImGui = "6"
 ComponentArrays = "0.15.29"
@@ -43,8 +50,4 @@ RobustAndOptimalControl = "0.4.45"
 StaticArrays = "1.9.14"
 StructArrays = "0.7"
 StructTypes = "1.11.0"
-julia = "1.10"
-
-[sources]
-FlightCore = {path = "../FlightCore"}
-FlightLib = {path = "../FlightLib"}
+julia = "1.12"
