--- a/packages/FlightApps/test/Project.toml
+++ b/packages/FlightApps/test/Project.toml
@@ -1,6 +1,7 @@
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
+FlightApps = "c94c8c3d-2ef7-4940-9544-b98dae328d9f"
 FlightCore = "e3cc1ee6-15ac-4fef-96b3-1947582bf537"
 FlightLib = "217868e0-669b-4069-89f9-42760bf46690"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
@@ -19,8 +20,4 @@ JSON3 = "1.14"
 Plots = "1.41"
 StaticArrays = "1.9.14"
 StructTypes = "1.11.0"
-julia = "1.10"
-
-[sources]
-FlightCore = {path = "../../FlightCore"}
-FlightLib = {path = "../../FlightLib"}
+julia = "1.12"
