--- a/packages/FlightCore/Project.toml
+++ b/packages/FlightCore/Project.toml
@@ -47,4 +47,7 @@ SDL2_jll = "2.24.2"
 StaticArrays = "1.9.14"
 StructArrays = "0.7"
 StructTypes = "1.11.0"
-julia = "1.10"
+julia = "1.12"
+
+[workspace]
+projects = ["test"]
