--- a/packages/FlightLib/Project.toml
+++ b/packages/FlightLib/Project.toml
@@ -3,6 +3,9 @@ uuid = "217868e0-669b-4069-89f9-42760bf46690"
 version = "0.1.0"
 authors = ["Miguel Alonso <miguel883@gmail.com>"]
 
+[workspace]
+projects = ["test"]
+
 [deps]
 CImGui = "5d785b6c-b76f-510e-a07c-3070796c7e87"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
@@ -30,6 +33,9 @@ StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 
+[sources]
+FlightCore = {path = "../FlightCore"}
+
 [compat]
 CImGui = "6"
 ComponentArrays = "0.15.29"
@@ -51,7 +57,4 @@ StaticArrays = "1.9.14"
 StructArrays = "0.7"
 StructTypes = "1.11.0"
 Trapz = "2.0.3"
-julia = "1.10"
-
-[sources]
-FlightCore = {path = "../FlightCore"}
+julia = "1.12"
