--- a/packages/FlightLib/test/Project.toml
+++ b/packages/FlightLib/test/Project.toml
@@ -4,6 +4,7 @@ ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 ControlSystems = "a6e380b2-a6ca-5380-bf3e-84a91bcd477e"
 FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 FlightCore = "e3cc1ee6-15ac-4fef-96b3-1947582bf537"
+FlightLib = "217868e0-669b-4069-89f9-42760bf46690"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -26,7 +27,4 @@ JSON3 = "1.14"
 Plots = "1.41"
 StaticArrays = "1.9.14"
 StructTypes = "1.11.0"
-julia = "1.10"
-
-[sources]
-FlightCore = {path = "../../FlightCore"}
+julia = "1.12"
